add flag --enable-native-access=ALL-UNNAMED for Java 25 requirement